--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,4 +27,4 @@ jobs:
         pip install -r web/requirements.txt
     - name: Run Tests
       run: |
-        python  web/testCICD/manage.py test
+        python  web/pdfreader_test/manage.py test
