--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,4 +1,19 @@
-wheel
-django
-uwsgi
-
+asgiref==3.5.2
+backports.zoneinfo==0.2.1
+charset-normalizer==2.1.0
+cryptography==37.0.4
+Django==4.0.6
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+packaging==21.3
+pdfminer.six==20220524
+pdfplumber==0.7.1
+Pillow==9.2.0
+pycparser==2.21
+pymssql==2.2.5
+pyparsing==3.0.9
+pytesseract==0.3.9
+sqlparse==0.4.2
+tzdata==2022.1
+Wand==0.6.7
+wincertstore==0.2
