--- a/nginx/docker-nginx-web.conf
+++ b/nginx/docker-nginx-web.conf
@@ -1,7 +1,7 @@
 
 upstream uwsgi {
     # server unix:/web/pdfreader/web.sock; # using a file socket
-    server cicd_web:8001;  # using the docker network
+    server pdf_web:8001;  # using the docker network
 }
 
 server {
