--- a/web/pdfreader_test/requirements.txt
+++ b/web/pdfreader_test/requirements.txt
@@ -4,7 +4,7 @@ asgiref==3.5.2
 backports.zoneinfo==0.2.1
 charset-normalizer==2.1.0
 cryptography==37.0.4
-Django==4.0.6
+Django
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 packaging==21.3
