--- a/nginx/docker-nginx-web.conf
+++ b/nginx/docker-nginx-web.conf
@@ -1,5 +1,5 @@
 
-upstream uwsgi {
+upstream django {
     # server unix:/web/pdfreader/web.sock; # using a file socket
     server pdf_web:8001;  # using the docker network
 }
