--- a/nginx/docker-nginx-web.conf
+++ b/nginx/docker-nginx-web.conf
@@ -1,5 +1,5 @@
 
-upstream django {
+upstream uwsgi {
     # server unix:/web/pdfreader/web.sock; # using a file socket
     server pdf_web:8001;  # using the docker network
 }
@@ -21,7 +21,7 @@ server {
     location / {
         # using uwsgi protocal ↓↓↓ 
         uwsgi_pass uwsgi;
-        proxy_pass http://django;
+        #proxy_pass http://django;
 	# uwsgi_pass web:8010;
         include /etc/nginx/uwsgi_params; # the uwsgi_params file you installed
         # using uwsgi protocal ↑↑↑
