--- a/nginx/docker-nginx-web.conf
+++ b/nginx/docker-nginx-web.conf
@@ -21,7 +21,7 @@ server {
     location / {
         # using uwsgi protocal ↓↓↓ 
         uwsgi_pass uwsgi;
-        #proxy_pass http://django;
+        proxy_pass http://uwsgi;
 	# uwsgi_pass web:8010;
         include /etc/nginx/uwsgi_params; # the uwsgi_params file you installed
         # using uwsgi protocal ↑↑↑
