--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,8 @@ jobs:
             sudo systemctl restart docker
             sudo chmod 777 /var/run/docker.sock
             docker-compose down
-            
+            docker rmi -f testcicd_stage4-pdf_nginx testcicd_stage4-pdf_web
+            docker volume rm $(docker volume ls)
             docker-compose up -d
             
 
