--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,8 @@ jobs:
           key: ${{ secrets.TOKEN }}
           username: ec2-user
           # 執行部屬的指令
+          #docker rmi -f $(docker images -q  -f dangling=true)
+          #docker volume rm $(docker volume ls -q -f dangling=true)
           script: | 
             whoami
         
@@ -42,9 +44,8 @@ jobs:
             sudo systemctl restart docker
             sudo chmod 777 /var/run/docker.sock
             docker-compose down
-            docker rmi -f testcicd_stage4-pdf_nginx testcicd_stage4-pdf_web
-            docker volume rm $(docker volume ls)
-            docker-compose up -d
+            
+            docker-compose up --bulid -d 
             
 
 
